# diffusion_workers

./: .gitignore  CLAUDE.md  CONTINUE.md  LICENSE  build.sh  main.py  run_server.sh
.continue/prompts/: new-prompt.yaml
.continue/rules/: CONTINUE.md
basic_client/: .prettierignore  .prettierrc.js  App.tsx  REQUIREMENTS.md  TECHNICAL_PLAN.md  app.config.js  babel.config.js  eslint.config.js  metro.config.js  package-lock.json  package.json  tamagui.config.ts  tsconfig.json
basic_client/app/: _layout.tsx  index.tsx
basic_client/components/: GenerationParamsPanel.tsx  GenerationParamsPanelContainer.tsx  HistoryList.tsx  HistoryListContainer.tsx  InputImagePanel.tsx  OutputImagePanel.tsx  index.ts
basic_client/constants/: api.ts
basic_client/hooks/: index.ts  useStores.ts
basic_client/services/: diffusionService.ts
basic_client/stores/: HistoryState.ts  imageStore.ts  (+4 more)
dreamshaper/: Dockerfile  dreamshaper.json  pyproject.toml
openapi/: ez_diffusion_api.yaml  sdxl_worker_api.yaml
sdxl_worker/: Dockerfile  README.md  main.py  pyproject.toml  rp_handler.py  test_input.json
server/: Dockerfile  README.md  controlnet_factory.py  controlnet_params_factory.py  controlnet_preprocessor.py  diffusion_service.py  docker-bake.hcl  handler.py  imagegen_service.py  inference_service.py  ltxv_service.py  model_loading_manifest.example.yaml  pipeline_factory.py  pipelinewrapper.py  preload.py  pyproject.toml  test_cli_client.py  utils.py  videogen_service.py  wan_videogen_service.py
server/models/: __init__.py  opresult.py  requests.py
src/: auto_pipeline_service.py
(+135 files in other folders)
