[project]
name = "mooove-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.34.0",
    "pydantic>=2.11.7",
    "runpod>=1.7.13",
    "transformers>=4.54.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "peft>=0.17.0",
    "controlnet-aux>=0.0.10",
    "deepcache>=0.1.1",
    "huggingface-hub>=0.34.3",
    "hf-transfer>=0.1.9",
    "sentencepiece>=0.2.1",
]
